# GapNeedle

./: .gitignore  .gitmodules  CMakeLists.txt  GapNeedle.spec  README.md  README_cn.md  configuration.py  pyproject.toml  test.py
build_cpp_check/: gapneedle_cli
build_cpp_gui_check/: gapneedle_cli
build_cpp_gui_check/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake/: minimap2.cmake
gapfillet/: __init__.py  aligner.py  cli.py  stitcher.py
gapfillet/gui/: __init__.py  alignment_viewer.py  app.py  igv_viewer.py  theme.py
gapneedle/: __init__.py  aligner.py  cli.py  io.py  stitcher.py
gapneedle/gui/: __init__.py  alignment_viewer.py  app.py  igv_viewer.py  theme.py
include/gapneedle/: aligner.hpp  facade.hpp  fasta_io.hpp  guided_stitch_service.hpp  mapping_service.hpp  paf.hpp  stitch_service.hpp  telomere_service.hpp  types.hpp
src/cli/: main.cpp
src/core/: facade.cpp  guided_stitch_service.cpp  mapping_service.cpp  stitch_service.cpp  telomere_service.cpp
src/gui/: align_page.cpp  align_page.hpp  fasta_search_page.cpp  fasta_search_page.hpp  guided_stitch_page.cpp  guided_stitch_page.hpp  main.cpp  main_window.cpp  main_window.hpp  manual_stitch_page.cpp  manual_stitch_page.hpp  paf_viewer_page.cpp  paf_viewer_page.hpp  ui_components.cpp  ui_components.hpp  ui_theme.cpp  ui_theme.hpp
src/gui/resources/: appicon.rc  gui_resources.qrc
src/io/: fasta_io.cpp  paf_parser.cpp
src/minimap2_bridge/: minimap2_aligner.cpp  minimap2_aligner_stub.cpp  minimap2_bridge.c  minimap2_bridge.h
tests/: test_main.cpp
