[project]
name = "gapneedle"
version = "0.1.0"
description = "Gap filling and stitching helper around minimap2 (mappy) with Jupyter-friendly UX."
authors = [{ name = "Zexin Zhang" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mappy>=2.24",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15",
    "PyQt-Fluent-Widgets>=1.5",
]
all = [
    "mappy>=2.24",
    "PyQt5>=5.15",
    "PyQt-Fluent-Widgets>=1.5",
]

[project.scripts]
gapneedle = "gapneedle.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
